--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,72 @@
+appdirs==1.4.4
+audioread==3.0.0
+autocorrect==2.6.1
+blis==0.7.9
+catalogue==2.0.8
 certifi==2023.5.7
+cffi==1.15.1
 charset-normalizer==3.1.0
 click==8.1.3
+colorama==0.4.6
+confection==0.1.0
+contourpy==1.1.0
+cycler==0.11.0
+cymem==2.0.7
+decorator==5.1.1
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0-py3-none-any.whl#sha256=0964370218b7e1672a30ac50d72cdc6b16f7c867496f1d60925691188f4d2510
 et-xmlfile==1.1.0
+fonttools==4.40.0
 idna==3.4
+Jinja2==3.1.2
 joblib==1.3.0
 keras==2.13.1
+kiwisolver==1.4.4
+langcodes==3.3.0
+lazy_loader==0.3
+librosa==0.8.1
+llvmlite==0.40.1
+MarkupSafe==2.1.3
+matplotlib==3.7.2
+msgpack==1.0.5
+murmurhash==1.0.9
 nltk==3.8.1
-numpy==1.25.0
+numba==0.57.1
+numpy==1.24.4
 openpyxl==3.1.2
+packaging==23.1
 panda==0.3.1
 pandas==2.0.3
+pathy==0.10.2
+Pillow==10.0.0
+pooch==1.6.0
+praat-parselmouth==0.4.3
+preshed==3.0.8
+pycparser==2.21
+pydantic==1.10.10
+pyparsing==3.0.9
+PyPDF2==3.0.1
 python-dateutil==2.8.2
+python-speech-features==0.6
 pytz==2023.3
 regex==2023.6.3
 requests==2.31.0
+resampy==0.4.2
 scikit-learn==1.2.2
 scipy==1.11.1
 six==1.16.0
+smart-open==6.3.0
+soundfile==0.12.1
+soxr==0.3.5
+spacy==3.5.4
+spacy-legacy==3.0.12
+spacy-loggers==1.0.4
+srsly==2.4.6
+textblob==0.17.1
+thinc==8.1.10
 threadpoolctl==3.1.0
 tqdm==4.65.0
+typer==0.9.0
+typing_extensions==4.7.1
 tzdata==2023.3
 urllib3==2.0.3
+wasabi==1.1.2
